--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="+5,5 cm într-o săptămână">
 <meta property="og:description" content="Funcționează!">
 <meta property="og:image" content="https://i.ibb.co/850RLQv/7.jpg">
-  <title>Scaune de masaj</title>
+  <title>Funcționează!</title>
   <meta name="description" content="Alex">
   <meta name="keywords" content="Under">
   <meta name="author" content="CPA">
